fix overflow again

--- a/css/mobile/_3-skill-mobile.scss
+++ b/css/mobile/_3-skill-mobile.scss
@@ -28,15 +28,15 @@
             }
 
             .skill-text-wrapper{
-                height: 70%;
+                height: 65%;
                 p{
                     font-size: 2.5vw;
-                    margin-top: 10px;
+                    margin-top: 0px;
                 }
     
                 span{
                     font-size: 2.2vw;
-                    margin-top: 2.5px;
+                    margin-top: 1px;
                 }
             }
         }
